<resources>
    <string name="app_name">BookManager</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Tab1">COLLECTION</string>
    <string name="Tab2">SUMMARY</string>
    <string name="app_Name" />
    <string name="app_real_name">BookManager</string>
    <string name="Title">Title:</string>
    <string name="Author">Author:</string>
    <string name="Course">Course:</string>
    <string name="ISBN">ISBN:</string>
    <string name="Price">Price:</string>
    <string name="total_books">Total Books:</string>
    <string name="text_total_cost">Total cost:</string>
    <string name="text_most_expensive">Most expensive:</string>
    <string name="text_least_expensive">Least expensive:</string>
    <string name="text_mean">Mean price:</string>
    <string name="add_button">add</string>
    <string name="save_button" />
    <string name="error1">The book needs a title!</string>
</resources>

